--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -16,3 +16,9 @@
 	- Montesano: SSH=0, waterdepth = 5m
  - Ran original model from Stantec to look at results at each observation station
  - Ran TwinHarbors_test10 with tides, merged discharge (Satsop+Porter), waves (no MET)
+
+Issues:
+- Disk quota exceeded for model runs due to >200GB
+	- Fixed by:
+		- Deleting older files and running one model at a time
+		- Created extract_netcdf.sh script to create new files with specific variables, decreasing the size of each output file by >50%
