--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -22,3 +22,4 @@ Issues:
 	- Fixed by:
 		- Deleting older files and running one model at a time
 		- Created extract_netcdf.sh script to create new files with specific variables, decreasing the size of each output file by >50%
+- Cannot use nctoolkit in environment because it requires python version 3.8+ (environment uses v=3.6)
