--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -8,7 +8,11 @@ Tasks
 
 1) Comparison of Stantec model and DFM model (2023):
 - Stantec report shows Toke point and Westport stations are referenced to MLLW
-	- According to NOAA:
+	- Stantec report (1999):
+		- Westport NAVD88 is +1.77 ft (above MLLW)
+		- Tokepoint NAVD88 is +0.82 ft (above MLLW)
+		- Aberdeen NAVD88 is +1.64 ft (above MLLW)
+	- According to NOAA (2023):
 		- Westport NAVD88 is +1.12 ft (above MLLW)
 			- Mean ∆SSH in full DFM model (T+M+D+W) is ~1.32m
     			- https://tidesandcurrents.noaa.gov/datums.html?id=9441102
@@ -20,6 +24,25 @@ Tasks
 	- Toke point: SSH=0, waterdepth = 1.42673181m
 	- Montesano: SSH=0, waterdepth = 5m
 
+3) 1999 Stantec model run:
+	- Could only compare Tokepoint station (no GH or Westport stations in 1999 in Stantec folder)
+	- Water depth output exceeded NOAA observations (NAVD88)
+	- SSH output underestimated NOAA observations (NAVD88)
+	- SSH (+0.24m) output brings us closer to NOAA observations but still underestimated
+		- Added 0.24m assuming that model output is in MLLW (Stantec Report), so +0.24m is correction to NAVD88 based on Tokepoint NOAA station
+	 	- https://tidesandcurrents.noaa.gov/datums.html?id=9440910
+ - # Insert pictures here from 1999 run
+
+4) Ran DFM (2023) model (T+D*+W)
+	- Tides, discharge (merged), and waves
+	- Tokepoint:
+		- Water depth output aligned with observations (NAVD88)
+		- SSH output underestimated NOAA observations (NAVD88)
+		- SSH (+0.24m) output brings us closer, but still underestimated
+	- Westport:
+		- Water depth output way overestimated observations
+  - (Maybe plot again?) 
+- # Insert pictures here from Job17433700 run
 
 - Depth at points nearest to observation points based on bathymetry file (*tw_v60m*)
 	- Westport: -5.8507181825396275m
