--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -33,7 +33,7 @@ Tasks
 	 	- https://tidesandcurrents.noaa.gov/datums.html?id=9440910
  - # Insert pictures here from 1999 run
 
-4) Ran DFM (2023) model (T+D*+W)
+4) Ran DFM (2023) model (T+D*+W) (TwinHarbors_test10)
 	- Tides, discharge (merged), and waves
 	- Tokepoint:
 		- Water depth output aligned with observations (NAVD88)
@@ -44,17 +44,26 @@ Tasks
   - (Maybe plot again?) 
 - # Insert pictures here from Job17433700 run
 
+5) Ran DFM (2023) model (T+W) (TwinHarbors_test12)
+	- Tides and waves only
+	- Tokepoint:
+		- Water depth output aligned with obserations (NAVD88)
+		- SSH output underestimated NOAA observations (NAVD88)
+		- SSH (+0.24m) output brings us closer, but still underestimated
+	- Westport:
+		- Water depth output overestimated observations (NAVD88) by a lot (>4m)
+		- SSH output underestimated NOAA observations (NAVD88)
+		- SSH (+0.34m) output brings us closer, but still underestimated
+
 - Depth at points nearest to observation points based on bathymetry file (*tw_v60m*)
 	- Westport: -5.8507181825396275m
 	- Montesano: -5.0m
 	- Toke point: -1.4809497578709583
 
- - Ran original model from Stantec to look at results at each observation station
- - Ran TwinHarbors_test10 with tides, merged discharge (Satsop+Porter), waves (no MET)
-
 Issues:
 - Disk quota exceeded for model runs due to >200GB
-	- Fixed by:
+	- Tried to fix by:
 		- Deleting older files and running one model at a time
 		- Created extract_netcdf.sh script to create new files with specific variables, decreasing the size of each output file by >50%
+	- Issue NOT resolved
 - Cannot use nctoolkit in environment because it requires python version 3.8+ (environment uses v=3.6)
