--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -34,7 +34,7 @@ Tasks
 
 ![Tokepoint Water Depth (1999)](../Figures/040224meeting/Tokepoint_wl_wd_1999.png)
 
-![Tokepoint SSH (1999)](../Figures/0402224meeting/Tokepoint_wl_ssh_1999.png)
+![Tokepoint SSH (1999)](Figures/0402224meeting/Tokepoint_wl_ssh_1999.png)
 
 ![Tokepoint SSH +0.24m (1999)](../Figures/0402224meeting/Tokepoint_wl_ssh_1999_plus024.png)
 
