--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -60,6 +60,10 @@ Tasks
 
 ![Westport SSH +0.34m (T+D*+W) (2023)](../Figures/040224meeting/Job17433700_Westport_wl_ssh_nomet_plus034.png)
 
+![Map of Tokepoint coordinates](../Figures/Tokepoint_coordinates)
+
+![Map of Westport coordinates](../Figures/Westport_coordinates)
+
 5) Ran DFM (2023) model (T+W) (TwinHarbors_test12)
 	- Tides and waves only
 	- Tokepoint:
