--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -1,4 +1,15 @@
 ## March 24 - March 30
+Summary:
+1) Stantec's report shows tidal datums are referenced to MLLW (corrections referenced below is to convert MLLW to NAVD88)
+2) 1999 Stantec model shows water depth output aligning best with observations (NAVD88) at Tokepoint (no corrections)
+3) 2023 DFM model run (tides, discharge (merged), and waves):
+	- Tokepoint water depth output aligns best with observations at Tokepoint (no corrections)
+	- Westport corrected SSH (+0.34) is closer to observations at NOAA gauge, but still underestimated
+4) 2023 DFM model run (tides + waves):
+	- Tokepoint water depth output aligns best with observations at Tokepoint (no corrections)
+	- Westport corrected SSH (+0.34) is closer to observations at NOAA gauge, but still underestimated
+
+
 Tasks
 1) Look at Stantec model datum and compare with new model
 2) Ran DFM model (TwinHarbors_test11) with no forcing
