--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -8,6 +8,11 @@ Summary:
 4) 2023 DFM model run (tides + waves):
 	- Tokepoint water depth output aligns best with observations at Tokepoint (no corrections)
 	- Westport corrected SSH (+0.34) is closer to observations at NOAA gauge, but still underestimated
+5) Only differences found between Stantec's model and new DFM model is time intervals, atmospheric forcing, discharge forcing, and wave forcing
+	- Next steps:
+		- Change location for water level comparison? (Westport within Marina)
+		- Run tidal for random time without storm to see if both models can simulate tides at Tokepoint and Westport
+		- Compare 1999 wave data with model output for validation
 
 
 Tasks
@@ -112,3 +117,6 @@ Issues:
 		- Created extract_netcdf.sh script to create new files with specific variables, decreasing the size of each output file by >50%
 	- Issue NOT resolved
 - Cannot use nctoolkit in environment because it requires python version 3.8+ (environment uses v=3.6)
+- Still cannot figure out datum issue:
+	- Tokepoint seems to do just fine matching water depth output with NAVD88 observations for all runs
+ 	- Westport is off by ~1m when using NAVD88 corrected model output (+0.34m)
