--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -1,5 +1,5 @@
 ## March 24 - March 30
-Summary:
+### Summary:
 1) Stantec's report shows tidal datums are referenced to MLLW (corrections referenced below is to convert MLLW to NAVD88)
 2) 1999 Stantec model shows water depth output aligning best with observations (NAVD88) at Tokepoint (no corrections)
 3) 2023 DFM model run (tides, discharge (merged), and waves):
