--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -15,7 +15,7 @@
 		- Compare 1999 wave data with model output for validation
 
 
-Tasks
+### Tasks
 1) Look at Stantec model datum and compare with new model
 2) Ran DFM model (TwinHarbors_test11) with no forcing
 3) Ran original model from Stantec to look at results at each observation station
@@ -110,7 +110,7 @@ Tasks
 	- Montesano: -5.0m
 	- Toke point: -1.4809497578709583
 
-Issues:
+### Issues:
 - Disk quota exceeded for model runs due to >200GB
 	- Tried to fix by:
 		- Deleting older files and running one model at a time
