--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -54,7 +54,7 @@
 
 ![Tokepoint SSH +0.24m (1999)](../Figures/040224meeting/Tokepoint_wl_ssh_1999_plus024.png)
 
-	- Plotted Westport water level and SSH to compare magnitude with model runs in 2023 and the magnitude is similar
+*Plotted Westport water level and SSH to compare magnitude with model runs in 2023 and the magnitude is similar
 
 ![Westport Water Depth (1999)](../Figures/040224meeting/Westport_wl_wd_1999.png)
 
