--- a/WeeklyLogs/Log100823_101423.md
+++ b/WeeklyLogs/Log100823_101423.md
@@ -5,7 +5,7 @@
 - Research more into Delft-FM architecture and tools.
   - Begin reading Delft-FM manual (https://content.oss.deltares.nl/delft3d/D-Flow_FM_User_Manual.pdf)
 
-![Delft3D Diagram](Figures/Delft3D_diagram.png)
+![Delft3D Diagram](../Figures/Delft3D_diagram.png)
 
 - General research ideas for dissertation:
   - ADCP/water level gauges at mouth of Willapa River.
