--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -1,1 +1,13 @@
+# March 24 - March 30
+## Summary:
+
+
+## Tasks:
+1) Match location with NOAA_WL_OBS.xyn file for Tokepoint and Westport stations
+
+
+1) Compare DFM model output's water levels at Stantec's station coordinates
+
+
+## Issues:
 
