--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -85,9 +85,9 @@
 
 ![Westport SSH +0.34m (T+D*+W) (2023)](../Figures/040224meeting/Job17433700_Westport_wl_ssh_nomet_plus034.png)
 
-![Map of Tokepoint coordinates](../Figures/040224meeting/Tokepoint_coordinates)
+![Map of Tokepoint coordinates](../Figures/040224meeting/Tokepoint_coordinates.png)
 
-![Map of Westport coordinates](../Figures/040224meeting/Westport_coordinates)
+![Map of Westport coordinates](../Figures/040224meeting/Westport_coordinates.png)
 
 5) Ran DFM (2023) model (T+W) (TwinHarbors_test12)
 	- Tides and waves only
