--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -8,6 +8,23 @@
 '''
 '''
 1) Compare DFM model output's water levels at Stantec's station coordinates
+  - Used Tokepoint and Westport coordinates found in Stantec's report, and plotted 1999 and 2023 water levels at cell closest and had much better results
+  - Plotted SSH with newly downloaded NOAA water level (MSL)
+
+Figure 1: Tokepoint SSH (1999)
+![Tokepoint SSH (1999)](../Figures/040924/Tokepoint_wl_ssh_MSL_1999.png)
+
+Figure 2: Tokepoint SSH (2023)
+![Tokepoint SSH (2023)](../Figures/040924/Tokepoint_wl_ssh_MSL.png)
+
+Figure 3: Tokepoint coordinates 
+![Tokepoint Stantec coordinates](../Figures/040924/Tokepoint_coordinates_Stantec.png)
+
+Figure 4: Westport SSH (2023)
+![Westport SSH (2023)](../Figures/040924/Westport_wl_ssh_MSL.png)
+
+Figure 5: Westport coordinates 
+![Westport Stantec coordinates](../Figures/040924/Westport_coordinates_Stantec.png)
 
 
 ## Issues:
