--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -11,21 +11,20 @@
   - Used Tokepoint and Westport coordinates found in Stantec's report, and plotted 1999 and 2023 water levels at cell closest and had much better results
   - Plotted SSH with newly downloaded NOAA water level (MSL)
 
-Figure 1: Tokepoint SSH (1999)
 ![Tokepoint SSH (1999)](../Figures/040924meeting/Tokepoint_wl_ssh_MSL_1999.png)
+<strong><em>Figure 1: Tokepoint SSH (1999)</strong></em>
 
-Figure 2: Tokepoint SSH (2023)
 ![Tokepoint SSH (2023)](../Figures/040924meeting/Tokepoint_wl_ssh_MSL.png)
+<strong><em>Figure 2: Tokepoint SSH (2023)</strong></em>
 
-Figure 3: Tokepoint coordinates 
 ![Tokepoint Stantec coordinates](../Figures/040924meeting/Tokepoint_coordinates_Stantec.png)
+<strong><em>Figure 3: Tokepoint coordinates</strong></em>
 
-Figure 4: Westport SSH (2023)
 ![Westport SSH (2023)](../Figures/040924meeting/Westport_wl_ssh_MSL.png)
+<strong><em>Figure 4: Westport SSH (2023)</strong></em>
 
-Figure 5: Westport coordinates 
 ![Westport Stantec coordinates](../Figures/040924meeting/Westport_coordinates_Stantec.png)
-
+<strong><em>Figure 5: Westport coordinates</strong></em>
 
 ## Issues:
 
