--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -5,8 +5,7 @@
 ## Tasks:
 1) Match location with NOAA_WL_OBS.xyn file for Tokepoint and Westport stations
 
-'''
-'''
+## Results
 1) Compare DFM model output's water levels at Stantec's station coordinates
   - Used Tokepoint and Westport coordinates found in Stantec's report, and plotted 1999 and 2023 water levels at cell closest and had much better results
   - Plotted SSH with newly downloaded NOAA water level (MSL)
