--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -1,8 +1,9 @@
 # March 24 - March 30
 ## Summary:
 1) Changing coordinates to match Stantec's in their report yields much better agreement between the model output and NOAA tide gauges (Tokepoint and Westport) referenced to MSL.
-  - Coordinate for Stantec's Westport coordinate is ~1,350m SE of NOAA gauge.
   - Coordinate for Statenc's Tokepoint coordinate is ~400m SE of NOAA gauge.
+  - Coordinate for Stantec's Westport coordinate is ~1,350m SE of NOAA gauge.
+  - Westport SSH is still truncated at LLW.
 
 ## Tasks:
 1) Match location with NOAA_WL_OBS.xyn file for Tokepoint and Westport stations
