--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -4,9 +4,13 @@
   - Coordinate for Statenc's Tokepoint coordinate is ~400m SE of NOAA gauge.
   - Coordinate for Stantec's Westport coordinate is ~1,350m SE of NOAA gauge.
   - Westport SSH is still truncated at LLW.
+2) Compared 1999 survey data with DFM model (1999)
+  - Most x velocity matches (GH1, GH3, GH4, GH6)
+  - GH2 and GH5 have phase shifts
 
 ## Tasks:
 1) Match location with NOAA_WL_OBS.xyn file for Tokepoint and Westport stations
+2) Compare survey data with 1999 DFM model output for validation
 
 ## Results
 1) Compare DFM model output's water levels at Stantec's station coordinates
@@ -27,6 +31,8 @@
 
 ![Westport Stantec coordinates](../Figures/040924meeting/Westport_coordinates_Stantec.png)
 <strong><em>Figure 5: Westport coordinates</strong></em>
+
+2) 
 
 ## Issues:
 
