--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -13,7 +13,7 @@
 2) Compare survey data with 1999 DFM model output for validation
 
 ## Results
-1) Compare DFM model output's water levels at Stantec's station coordinates
+### 1) Compare DFM model output's water levels at Stantec's station coordinates
   - Used Tokepoint and Westport coordinates found in Stantec's report, and plotted 1999 and 2023 water levels at cell closest and had much better results
   - Plotted SSH with newly downloaded NOAA water level (MSL)
 
@@ -32,7 +32,24 @@
 ![Westport Stantec coordinates](../Figures/040924meeting/Westport_coordinates_Stantec.png)
 <strong><em>Figure 5: Westport coordinates</strong></em>
 
-2) 
+### 2) Compare survey data with 1999 DFM model output for validation
+![GH1 Current Data (1999)](../Figures/040924meeting/GH1_currentdata.png)
+<strong><em>Figure 6: GH1 Current Data (1999)</strong></em>
+
+![GH2 Current Data (1999)](../Figures/040924meeting/GH2_currentdata.png)
+<strong><em>Figure 7: GH2 Current Data (1999)</strong></em>
+
+![GH3 Current Data (1999)](../Figures/040924meeting/GH3_currentdata.png)
+<strong><em>Figure 8: GH3 Current Data (1999)</strong></em>
+
+![GH4 Current Data (1999)](../Figures/040924meeting/GH4_currentdata.png)
+<strong><em>Figure 9: GH4 Current Data (1999)</strong></em>
+
+![GH5 Current Data (1999)](../Figures/040924meeting/GH5_currentdata.png)
+<strong><em>Figure 10: GH5 Current Data (1999)</strong></em>
+
+![GH6 Current Data (1999)](../Figures/040924meeting/GH6_currentdata.png)
+<strong><em>Figure 11: GH6 Current Data (1999)</strong></em>
 
 ## Issues:
 
