--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -6,7 +6,9 @@
   - Westport SSH is still truncated at LLW.
 2) Compared 1999 survey data with DFM model (1999)
   - Most x velocity matches (GH1, GH3, GH4, GH6)
-  - GH2 and GH5 have phase shifts
+  - GH2 matches phase but differs in magnitude
+  - GH5 phases seem to be shifted
+    - Lag correlation of -2 hours
 
 ## Tasks:
 1) Match location with NOAA_WL_OBS.xyn file for Tokepoint and Westport stations
@@ -33,23 +35,66 @@
 <strong><em>Figure 5: Westport coordinates</strong></em>
 
 ### 2) Compare survey data with 1999 DFM model output for validation
+#### GH Survey Map
+![GH Survey Map (1999)](../Figures/040924meeting/GH_surveymap.png)
+<strong><em>Figure 6: GH survey map (1999)</strong></em>
+
+#### Time Series
 ![GH1 Current Data (1999)](../Figures/040924meeting/GH1_currentdata.png)
-<strong><em>Figure 6: GH1 Current Data (1999)</strong></em>
+<strong><em>Figure 7: GH1 Current Data (1999)</strong></em>
 
 ![GH2 Current Data (1999)](../Figures/040924meeting/GH2_currentdata.png)
-<strong><em>Figure 7: GH2 Current Data (1999)</strong></em>
+<strong><em>Figure 8: GH2 Current Data (1999)</strong></em>
 
 ![GH3 Current Data (1999)](../Figures/040924meeting/GH3_currentdata.png)
-<strong><em>Figure 8: GH3 Current Data (1999)</strong></em>
+<strong><em>Figure 9: GH3 Current Data (1999)</strong></em>
 
 ![GH4 Current Data (1999)](../Figures/040924meeting/GH4_currentdata.png)
-<strong><em>Figure 9: GH4 Current Data (1999)</strong></em>
+<strong><em>Figure 10: GH4 Current Data (1999)</strong></em>
 
 ![GH5 Current Data (1999)](../Figures/040924meeting/GH5_currentdata.png)
-<strong><em>Figure 10: GH5 Current Data (1999)</strong></em>
+<strong><em>Figure 11: GH5 Current Data (1999)</strong></em>
 
 ![GH6 Current Data (1999)](../Figures/040924meeting/GH6_currentdata.png)
-<strong><em>Figure 11: GH6 Current Data (1999)</strong></em>
+<strong><em>Figure 12: GH6 Current Data (1999)</strong></em>
+
+#### Property Plots
+![GH1 Property Plot (1999)](../Figures/040924meeting/GH1_propertyplot.png)
+<strong><em>Figure 13: GH1 property plot (1999)</strong></em>
+
+![GH2 Property Plot (1999)](../Figures/040924meeting/GH2_propertyplot.png)
+<strong><em>Figure 14: GH2 property plot (1999)</strong></em>
+
+![GH3 Property Plot (1999)](../Figures/040924meeting/GH3_propertyplot.png)
+<strong><em>Figure 15: GH3 property plot (1999)</strong></em>
+
+![GH4 Property Plot (1999)](../Figures/040924meeting/GH4_propertyplot.png)
+<strong><em>Figure 16: GH4 property plot (1999)</strong></em>
+
+![GH5 Property Plot (1999)](../Figures/040924meeting/GH5_propertyplot.png)
+<strong><em>Figure 17: GH5 property plot (1999)</strong></em>
+
+![GH6 Property Plot (1999)](../Figures/040924meeting/GH6_propertyplot.png)
+<strong><em>Figure 18: GH6 property plot (1999)</strong></em>
+
+#### Lag Correlations
+![GH1 Lag Correlation (1999)](../Figures/040924meeting/GH1_lagcorr.png)
+<strong><em>Figure 19: GH1 lag correlation (1999)</strong></em>
+
+![GH2 Lag Correlation (1999)](../Figures/040924meeting/GH2_lagcorr.png)
+<strong><em>Figure 20: GH2 lag correlation (1999)</strong></em>
+
+![GH3 Lag Correlation (1999)](../Figures/040924meeting/GH3_lagcorr.png)
+<strong><em>Figure 21: GH3 lag correlation (1999)</strong></em>
+
+![GH4 Lag Correlation (1999)](../Figures/040924meeting/GH4_lagcorr.png)
+<strong><em>Figure 22: GH4 lag correlation (1999)</strong></em>
+
+![GH5 Lag Correlation (1999)](../Figures/040924meeting/GH5_lagcorr.png)
+<strong><em>Figure 23: GH5 lag correlation (1999)</strong></em>
+
+![GH6 Lag Correlation (1999)](../Figures/040924meeting/GH6_lagcorr.png)
+<strong><em>Figure 24: GH6 lag correlation (1999)</strong></em>
 
 ## Issues:
 
