--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -93,7 +93,7 @@
 ![GH5 Lag Correlation (1999)](../Figures/040924meeting/GH5_lagcorr.png)
 <strong><em>Figure 23: GH5 lag correlation (1999)</strong></em>
 
-![GH6 Lag Correlation (1999)](../Figures/040924meeting/GH6_lagcorr.png)
+![GH6 Lag Correlation (1999)](../Figures/040924meeting/GH6_lagcorr.png)\
 <strong><em>Figure 24: GH6 lag correlation (1999)</strong></em>
 
 ## Issues:
