--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -19,78 +19,78 @@
   - Used Tokepoint and Westport coordinates found in Stantec's report, and plotted 1999 and 2023 water levels at cell closest and had much better results
   - Plotted SSH with newly downloaded NOAA water level (MSL)
 
-![Tokepoint SSH (1999)](../Figures/040924meeting/Tokepoint_wl_ssh_MSL_1999.png)
+![Tokepoint SSH (1999)](../Figures/040924meeting/Tokepoint_wl_ssh_MSL_1999.png)\
 <strong><em>Figure 1: Tokepoint SSH (1999)</strong></em>
 
-![Tokepoint SSH (2023)](../Figures/040924meeting/Tokepoint_wl_ssh_MSL.png)
+![Tokepoint SSH (2023)](../Figures/040924meeting/Tokepoint_wl_ssh_MSL.png)\
 <strong><em>Figure 2: Tokepoint SSH (2023)</strong></em>
 
-![Tokepoint Stantec coordinates](../Figures/040924meeting/Tokepoint_coordinates_Stantec.png)
+![Tokepoint Stantec coordinates](../Figures/040924meeting/Tokepoint_coordinates_Stantec.png)\
 <strong><em>Figure 3: Tokepoint coordinates</strong></em>
 
-![Westport SSH (2023)](../Figures/040924meeting/Westport_wl_ssh_MSL.png)
+![Westport SSH (2023)](../Figures/040924meeting/Westport_wl_ssh_MSL.png)\
 <strong><em>Figure 4: Westport SSH (2023)</strong></em>
 
-![Westport Stantec coordinates](../Figures/040924meeting/Westport_coordinates_Stantec.png)
+![Westport Stantec coordinates](../Figures/040924meeting/Westport_coordinates_Stantec.png)\
 <strong><em>Figure 5: Westport coordinates</strong></em>
 
 ### 2) Compare survey data with 1999 DFM model output for validation
 #### GH Survey Map
-![GH Survey Map (1999)](../Figures/040924meeting/GH_surveymap.png)
+![GH Survey Map (1999)](../Figures/040924meeting/GH_surveymap.png)\
 <strong><em>Figure 6: GH survey map (1999)</strong></em>
 
 #### Time Series
-![GH1 Current Data (1999)](../Figures/040924meeting/GH1_currentdata.png)
+![GH1 Current Data (1999)](../Figures/040924meeting/GH1_currentdata.png)\
 <strong><em>Figure 7: GH1 Current Data (1999)</strong></em>
 
-![GH2 Current Data (1999)](../Figures/040924meeting/GH2_currentdata.png)
+![GH2 Current Data (1999)](../Figures/040924meeting/GH2_currentdata.png)\
 <strong><em>Figure 8: GH2 Current Data (1999)</strong></em>
 
-![GH3 Current Data (1999)](../Figures/040924meeting/GH3_currentdata.png)
+![GH3 Current Data (1999)](../Figures/040924meeting/GH3_currentdata.png)\
 <strong><em>Figure 9: GH3 Current Data (1999)</strong></em>
 
-![GH4 Current Data (1999)](../Figures/040924meeting/GH4_currentdata.png)
+![GH4 Current Data (1999)](../Figures/040924meeting/GH4_currentdata.png)\
 <strong><em>Figure 10: GH4 Current Data (1999)</strong></em>
 
-![GH5 Current Data (1999)](../Figures/040924meeting/GH5_currentdata.png)
+![GH5 Current Data (1999)](../Figures/040924meeting/GH5_currentdata.png)\
 <strong><em>Figure 11: GH5 Current Data (1999)</strong></em>
 
-![GH6 Current Data (1999)](../Figures/040924meeting/GH6_currentdata.png)
+![GH6 Current Data (1999)](../Figures/040924meeting/GH6_currentdata.png)\
 <strong><em>Figure 12: GH6 Current Data (1999)</strong></em>
 
 #### Property Plots
-![GH1 Property Plot (1999)](../Figures/040924meeting/GH1_propertyplot.png)
+![GH1 Property Plot (1999)](../Figures/040924meeting/GH1_propertyplot.png)\
 <strong><em>Figure 13: GH1 property plot (1999)</strong></em>
 
-![GH2 Property Plot (1999)](../Figures/040924meeting/GH2_propertyplot.png)
+![GH2 Property Plot (1999)](../Figures/040924meeting/GH2_propertyplot.png)\
 <strong><em>Figure 14: GH2 property plot (1999)</strong></em>
 
-![GH3 Property Plot (1999)](../Figures/040924meeting/GH3_propertyplot.png)
+![GH3 Property Plot (1999)](../Figures/040924meeting/GH3_propertyplot.png)\
 <strong><em>Figure 15: GH3 property plot (1999)</strong></em>
 
-![GH4 Property Plot (1999)](../Figures/040924meeting/GH4_propertyplot.png)
+![GH4 Property Plot (1999)](../Figures/040924meeting/GH4_propertyplot.png)\
 <strong><em>Figure 16: GH4 property plot (1999)</strong></em>
 
-![GH5 Property Plot (1999)](../Figures/040924meeting/GH5_propertyplot.png)
+![GH5 Property Plot (1999)](../Figures/040924meeting/GH5_propertyplot.png)\
 <strong><em>Figure 17: GH5 property plot (1999)</strong></em>
 
-![GH6 Property Plot (1999)](../Figures/040924meeting/GH6_propertyplot.png)
+![GH6 Property Plot (1999)](../Figures/040924meeting/GH6_propertyplot.png)\
 <strong><em>Figure 18: GH6 property plot (1999)</strong></em>
 
 #### Lag Correlations
-![GH1 Lag Correlation (1999)](../Figures/040924meeting/GH1_lagcorr.png)
+![GH1 Lag Correlation (1999)](../Figures/040924meeting/GH1_lagcorr.png)\
 <strong><em>Figure 19: GH1 lag correlation (1999)</strong></em>
 
-![GH2 Lag Correlation (1999)](../Figures/040924meeting/GH2_lagcorr.png)
+![GH2 Lag Correlation (1999)](../Figures/040924meeting/GH2_lagcorr.png)\
 <strong><em>Figure 20: GH2 lag correlation (1999)</strong></em>
 
-![GH3 Lag Correlation (1999)](../Figures/040924meeting/GH3_lagcorr.png)
+![GH3 Lag Correlation (1999)](../Figures/040924meeting/GH3_lagcorr.png)\
 <strong><em>Figure 21: GH3 lag correlation (1999)</strong></em>
 
-![GH4 Lag Correlation (1999)](../Figures/040924meeting/GH4_lagcorr.png)
+![GH4 Lag Correlation (1999)](../Figures/040924meeting/GH4_lagcorr.png)\
 <strong><em>Figure 22: GH4 lag correlation (1999)</strong></em>
 
-![GH5 Lag Correlation (1999)](../Figures/040924meeting/GH5_lagcorr.png)
+![GH5 Lag Correlation (1999)](../Figures/040924meeting/GH5_lagcorr.png)\
 <strong><em>Figure 23: GH5 lag correlation (1999)</strong></em>
 
 ![GH6 Lag Correlation (1999)](../Figures/040924meeting/GH6_lagcorr.png)\
