--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -99,6 +99,7 @@
 ## Issues:
 
 ## Next steps:
-1) Run 2023 storm with new DFM model
-2) Think of ideas for CoPes All Hand's poster
+1) Run 2023 storm with new DFM model.
+2) Think of ideas for CoPes All Hand's poster.
+3) Change analysis scripts to use "*_his.nc" files for station analysis/comparisons.
 
