--- a/WeeklyLogs/Log010724_011324.md
+++ b/WeeklyLogs/Log010724_011324.md
@@ -1,4 +1,4 @@
-## January 07 - January 13
+## January 07 - January 13, 2024
 - Ran new DFM model with only tides (previous run had tide forcings removed, but added back in)
 - Created MakeDischarge.py script to take USGS discharge and output new file to make readable for DFM
 - Created MakeAtmGrid.py to try to merge and isolate wind and pressure data from LiveOcean
