--- a/WeeklyLogs/Log021124_030224.md
+++ b/WeeklyLogs/Log021124_030224.md
@@ -1,4 +1,4 @@
-## February 11 - March 02
+# February 11 - March 02, 2024
 - Ran model from 11/23 - 12/12/2023 for tide only, tide+MET, and tide+MET+discharge and generated OSM outputs
 	- Included extra river discharge (Satsop/Naselle)
  - Ran tide+MET+discharge (w/Satsop prescribed at Montesano) but showed lower water levels
