--- a/WeeklyLogs/Log030324_032324.md
+++ b/WeeklyLogs/Log030324_032324.md
@@ -1,4 +1,4 @@
-## March 03 - March 23
+# March 03 - March 23, 2024
 - Looked up datum references for USGS/NOAA gauges (Westport, Montesano, Tokepoint)
 	- All are referenced to NAVD88
 		- https://tidesandcurrents.noaa.gov/waterlevels.html?id=9440910 (Toke Point)
