--- a/WeeklyLogs/Log032424_033024.md
+++ b/WeeklyLogs/Log032424_033024.md
@@ -1,5 +1,5 @@
-## March 24 - March 30
-### Summary:
+# March 24 - March 30, 2024
+## Summary:
 1) Stantec's report shows tidal datums are referenced to MLLW (corrections referenced below is to convert MLLW to NAVD88)
 2) 1999 Stantec model shows water depth output aligning best with observations (NAVD88) at Tokepoint (no corrections)
 3) 2023 DFM model run (tides, discharge (merged), and waves):
@@ -15,7 +15,7 @@
 		- Compare 1999 wave data with model output for validation
 
 
-### Tasks
+## Tasks
 1) Look at Stantec model datum and compare with new model
 2) Ran DFM model (TwinHarbors_test11) with no forcing
 3) Ran original model from Stantec to look at results at each observation station
@@ -119,7 +119,7 @@
 	- Montesano: -5.0m
 	- Toke point: -1.4809497578709583
 
-### Issues:
+## Issues:
 - Disk quota exceeded for model runs due to >200GB
 	- Tried to fix by:
 		- Deleting older files and running one model at a time
