--- a/WeeklyLogs/Log033124_040624.md
+++ b/WeeklyLogs/Log033124_040624.md
@@ -1,4 +1,4 @@
-# March 24 - March 30
+# March 24 - March 30, 2024
 ## Summary:
 1) Changing coordinates to match Stantec's in their report yields much better agreement between the model output and NOAA tide gauges (Tokepoint and Westport) referenced to MSL.
   - Coordinate for Statenc's Tokepoint coordinate is ~400m SE of NOAA gauge.
