--- a/WeeklyLogs/Log100823_101423.md
+++ b/WeeklyLogs/Log100823_101423.md
@@ -1,4 +1,4 @@
-## October 08 - October 14
+# October 08 - October 14, 2023
 - Meet with Christie to discuss Deflt3D basics - (10/09)
 - Create shared spreadsheet for monitoring stations in Willapa Bay, Grays Harbor, and surrounding area.
   - https://docs.google.com/spreadsheets/d/1Mqzt7Lxn9V12FRSPelFWJJG9nrxQnFr4MR76eoNUSmU/edit#gid=0
