--- a/WeeklyLogs/Log101523_102123.md
+++ b/WeeklyLogs/Log101523_102123.md
@@ -1,4 +1,4 @@
-## October 15 - October 21
+# October 15 - October 21, 2023
 - Created Git repository on HYAK account for DelftFM files.
 - Read through Hydrodynamic section in Delft-FM manual.
 - Tried to understand SLURM scripts.
