--- a/WeeklyLogs/Log102923_110423.md
+++ b/WeeklyLogs/Log102923_110423.md
@@ -1,4 +1,4 @@
-## October 29 - November 04
+# October 29 - November 04, 2023
 - Loaded new Delft3D-FM license onto laptop.
 - Updated Laptop (took ~2 days).
 - Completed first three tutorials (creating a curvilinear grid and creating a triangular grid and Coupling multiple separate grids).
