--- a/WeeklyLogs/Log110523_111123.md
+++ b/WeeklyLogs/Log110523_111123.md
@@ -1,4 +1,4 @@
-## November 05 - November 11
+# November 05 - November 11, 2023
 Research Ideas:
 - Lateral circulation at mouth of Willapa River and Chehalis River (affects H101 and H105)
   - Motivation: Observe/model momentum budget at bends at mouth to look at bank erosion or salt transport
