--- a/WeeklyLogs/Log111223_111823.md
+++ b/WeeklyLogs/Log111223_111823.md
@@ -1,4 +1,4 @@
-## November 12 - November 18
+##November 12 - November 18, 2023
 - Ran DFM model (Job ID: 15392871) on 11/17.
   - Changed time in "dimr_config_parallel.xml" from "<time>0 3600 2592000</time>" to "<time>0 3600 86400</time>" (should be 24 hours).
   - Changed time in "dimr_config_parallel_lib.xml" from "<time>0 3600 2592000</time>" to "<time>0 3600 86400</time>" (should be 24 hours).
