--- a/WeeklyLogs/Log120323_120923.md
+++ b/WeeklyLogs/Log120323_120923.md
@@ -1,4 +1,4 @@
-## December 03 - December 09
+# December 03 - December 09, 2023
 - Collected results of week's atmospheric river event
 ![12/02-12/10 Storm Event (Precip, APress, WSpd, Water Level)](../Figures/Dec23_01.png)
 Figure 1: 12/02-12/10 Storm Event (Precip, APress, WSpd, Water Level)
