--- a/WeeklyLogs/Log012824_020324.md
+++ b/WeeklyLogs/Log012824_020324.md
@@ -1,4 +1,4 @@
-## January 28 - February 03
+# January 28 - February 03, 2024
 - Still working on fixing DFM model with met data and tides
 	- Weird psychedelic plots were result of assigning fixed indices for plotting for each *_map.nc file and starting the model run at 111523 instead of referenced to beginning of month
 	- BUT still seeing sharp increases in water level/SSH after fixing
