--- a/WeeklyLogs/Log020424_021024.md
+++ b/WeeklyLogs/Log020424_021024.md
@@ -1,3 +1,3 @@
-## February 04 - February 10
+# February 04 - February 10, 2024
 - Running model for 12/01 - 12/07/23 to see if it still shows weird water level values
 	- I'm assuming it's something weird with the model setup or parameters set?
