--- a/WeeklyLogs/Log102223_102823.md
+++ b/WeeklyLogs/Log102223_102823.md
@@ -1,4 +1,4 @@
-## October 22 - October 28
+# October 22 - October 28, 2023
 - Created temporary directory on hyak (/mmfs1/gscratch/derakhti/rchiu18).
 - Worked with Christie on HYAK basics (main files for Delft3D model run, submitting job, cancelling job, checking storage allocation, etc).
 - Tested rsync from HYAK server to local machine.
