--- a/WeeklyLogs/Log121023_121623.md
+++ b/WeeklyLogs/Log121023_121623.md
@@ -1,4 +1,4 @@
-## December 10 - December 16
+# December 10 - December 16, 2023
 - Laid out OSM poster roadmap
 	- Run different models (tides, tides+Q, tides+SS, tides+Q+SS) for December storm event
 - Ran 1999 model with just tides (or tried to) - TwinHarbors_test02
