--- a/WeeklyLogs/Log121723_122323.md
+++ b/WeeklyLogs/Log121723_122323.md
@@ -1,3 +1,3 @@
-## December 17 - December 23
+# December 17 - December 23, 2023
 - Looked at tide model and compared with previous model with all forcings
 - Ran new model for December 2023 storm - TwinHarbors_test03
