--- a/WeeklyLogs/Log122423_010624.md
+++ b/WeeklyLogs/Log122423_010624.md
@@ -1,4 +1,4 @@
-## December 24 - January 06
+# December 24, 2023 - January 06, 2024
 - Retrieved GFS data from LiveOcean server (Parker) and transferred onto Google Drive
 - Ran model for December 2023 storm with only tides (~10m run)
 - Started creating data analysis scripts for December storms
