--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -2,6 +2,9 @@
 ## Summary:
 
 ## Tasks:
+1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.
+2) Plot velocity and water levels at Westport location (new coordinate).
+3) Look at field around mouth of Gray's Harbor.
 
 ## Issues:
 
