--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -5,7 +5,10 @@
 1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.
 2) Plot velocity and water levels at Westport location (new coordinate).
 3) Look at field around mouth of Gray's Harbor.
+4) Run DFM model starting November 15, 2023.
 
 ## Issues:
+1) Running DFM model for November 15, 2023: water levels explode after ~1-2 days (tested with different combinations of forcings: tides; tides + MET; tides + Q; tides + MET + Q + waves).
+
 
 ## Next steps:
