--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -1,7 +1,8 @@
 # April 07 - April 13, 2024
 ## Summary:
 1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.
-2) 
+2) Flood tides: Westport has strong eastward and southward velocities; GH channel has strong eastward and northward velocities.
+3) Ebb tides, Westport has strong westward and northward velocities; GH channel has strong westward and southward velocities.
 
 ## Tasks:
 1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.
