--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -15,7 +15,7 @@
 Plotted water levels from 2023 DFM model run using Stantec's Westport coordinate and a new coordinate @ 46.908078, -124.099941 (~0.5km NE of NOAA's tide gauge, ~1.25km NW of Stantec's coordinate).
 
 ![Westport Water Levels (2023)](../Figures/041624meeting/Westport_wl_new.png)\
-<strong><em>Figure 1: Westport water levels (Stantec's coordinate vs. new @ 46.908078, -124.099941).</strong></em>
+<strong><em>Figure 1: Westport water levels (Stantec's coordinate vs. new @ 46.908078, -124.099941).</em>
 
 ### 2) Looked at x,y velocity and water level relationship at 2 different points
 Plotted velocity and water levels at new Westport location and a point in the GH channel (46.922102, -124.126883) to look at relationships between dη/dt and SSH (MSL).
@@ -27,7 +27,7 @@ Plotted velocity and water levels at new Westport location and a point in the GH
 <strong><em>Figure 3: Water levels and x,y velocities.</strong></em>
 
 ![Westport dη/dt and velocity relationship (2023)](../Figures/041624meeting/Westport_dzdt_vel.png)\
-<strong><em>Figure 4: Relationships between dη/dt and water velocities at Westport and GH channel.</strong></em>
+<strong><em>Figure 4: Relationships between dη/dt and water velocities at Westport and GH channel.</em>
 
 Takeaways:
 - During flood tides, Westport has strong eastward and southward velocities, while GH channel has strong eastward and northward velocities.
@@ -37,7 +37,7 @@ Takeaways:
 Velocities in channel show mean landward flow during flood tides and mean seaward flow during ebb tides. Circulations develop in middle of channel (e.g. xxxxx) and flow diverges during flood tides (e.g. xxxx)
 
 ![Velocity and Water Level GIF (2023)](../Figures/041624meeting/Westport_wl_vel.mp4)\
-<strong><em>Figure 5: Water levels at Westport location and velocity vectors in GH channel.</strong></em>
+<strong><em>Figure 5: Water levels at Westport location and velocity vectors in GH channel.</em>
 
 ## Issues:
 1) Running DFM model for November 15, 2023: water levels explode after ~1-2 days (tested with different combinations of forcings: tides; tides + MET; tides + Q; tides + MET + Q + waves).
