--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -21,10 +21,10 @@ Plotted water levels from 2023 DFM model run using Stantec's Westport coordinate
 Plotted velocity and water levels at new Westport location and a point in the GH channel (46.922102, -124.126883) to look at relationships between dη/dt and SSH (MSL).
 
 ![GH channel location](../Figures/041624meeting/GH_channel_loc.png)\
-<strong><em>Figure 2: Location of coordinate in GH channel.</strong></em>
+<strong><em>Figure 2: Location of coordinate in GH channel.</em>
 
 ![Westport Water Level & Velocities (2023)](../Figures/041624meeting/Westport_wl_vel.png)\
-<strong><em>Figure 3: Water levels and x,y velocities.</strong></em>
+<strong><em>Figure 3: Water levels and x,y velocities.</em>
 
 ![Westport dη/dt and velocity relationship (2023)](../Figures/041624meeting/Westport_dzdt_vel.png)\
 <strong><em>Figure 4: Relationships between dη/dt and water velocities at Westport and GH channel.</em>
