--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -3,7 +3,8 @@
 1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.
 2) Flood tides: Westport has strong eastward and southward velocities; GH channel has strong eastward and northward velocities.
 3) Ebb tides, Westport has strong westward and northward velocities; GH channel has strong westward and southward velocities.
-
+4) Stronger velocities at outer channel during transition between ebb/flood tides, then center of channel becomes stronger (velocities on south channel is stronger). 
+   
 ## Tasks:
 1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.
 2) Velocity and water level relationship at new Westport location and channel.
@@ -34,7 +35,7 @@ Takeaways:
 - During ebb tides, Westport has strong westward and northward velocities, while GH has strong westward and southward velocities.
 
 ### 3) Velocity field of GH channel during duration of 2023 model run (November 23 - December 12, 2023)
-Velocities in channel show mean landward flow during flood tides and mean seaward flow during ebb tides. Circulations develop in middle of channel (e.g. xxxxx) and flow diverges during flood tides (e.g. xxxx)
+Velocities in channel show mean landward flow during flood tides and mean seaward flow during ebb tides. During the transition between ebb and flood tides, velocities at the edges of the channel are stronger, then become weaker while velocities in the center channel become stronger throughout the tidal phase. Southern half of the channel exhibits stronger velocities roughly halfway through a tidal phase.
 
 ![Velocity and Water Level GIF (2023)](../Figures/041624meeting/Westport_wl_vel.mp4)\
 <strong><em>Figure 5: Water levels at Westport location and velocity vectors in GH channel.</em>
