--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -1,14 +1,14 @@
 # April 07 - April 13, 2024
 ## Summary:
-1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.
-2) Flood tides: Westport has strong eastward and southward velocities; GH channel has strong eastward and northward velocities.
-3) Ebb tides, Westport has strong westward and northward velocities; GH channel has strong westward and southward velocities.
+1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.\n
+2) Flood tides: Westport has strong eastward and southward velocities; GH channel has strong eastward and northward velocities.\n
+3) Ebb tides, Westport has strong westward and northward velocities; GH channel has strong westward and southward velocities.\n
 4) Stronger velocities at outer channel during transition between ebb/flood tides, then center of channel becomes stronger (velocities on south channel is stronger). 
    
 ## Tasks:
-1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.
-2) Velocity and water level relationship at new Westport location and channel.
-3) Velocity field in GH channel.
+1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.\n
+2) Velocity and water level relationship at new Westport location and channel.\n
+3) Velocity field in GH channel.\n
 4) Run DFM model starting November 15, 2023.
 
 ## Results:
