--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -1,6 +1,6 @@
 # April 07 - April 13, 2024
 ## Summary:
-1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.<br>
+1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.lala<br>
 2) Flood tides: Westport has strong eastward and southward velocities; GH channel has strong eastward and northward velocities.
 3) Ebb tides, Westport has strong westward and northward velocities; GH channel has strong westward and southward velocities.
 4) Stronger velocities at outer channel during transition between ebb/flood tides, then center of channel becomes stronger (velocities on south channel is stronger). 
