--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -1,16 +1,14 @@
 # April 07 - April 13, 2024
 ## Summary:
-1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.lala<br>
-2) Flood tides: Westport has strong eastward and southward velocities; GH channel has strong eastward and northward velocities.
-3) Ebb tides, Westport has strong westward and northward velocities; GH channel has strong westward and southward velocities.
+1) New Westport coordinate further offshore yields better water level predictions than coordinates provided by Stantec and NOAA gauge station.<br>
+2) Flood tides: Westport has strong eastward and southward velocities; GH channel has strong eastward and northward velocities.<br>
+3) Ebb tides, Westport has strong westward and northward velocities; GH channel has strong westward and southward velocities.<br>
 4) Stronger velocities at outer channel during transition between ebb/flood tides, then center of channel becomes stronger (velocities on south channel is stronger). 
    
 ## Tasks:
-1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.
-
-2) Velocity and water level relationship at new Westport location and channel.
-
-3) Velocity field in GH channel.
+1) Compare Westport water levels (further in channel) with Westport NOAA gauge location to see if better fit.<br>
+2) Velocity and water level relationship at new Westport location and channel.<br>
+3) Velocity field in GH channel.<br>
 4) Run DFM model starting November 15, 2023.
 
 ## Results:
@@ -43,7 +41,7 @@ Velocities in channel show mean landward flow during flood tides and mean seawar
 <strong><em>Figure 5: Water levels at Westport location and velocity vectors in GH channel.</em>
 
 ## Issues:
-1) Running DFM model for November 15, 2023: water levels explode after ~1-2 days (tested with different combinations of forcings: tides; tides + MET; tides + Q; tides + MET + Q + waves).
+1) Running DFM model for November 15, 2023: water levels explode after ~1-2 days (tested with different combinations of forcings: tides; tides + MET; tides + Q; tides + MET + Q + waves).<br>
 2) Fix overlaps between spatial maps: overlapping nodes with velocity and water level maps when plotting quivers or meshgrid.
 
 ## Next steps:
