--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -17,6 +17,7 @@ Plotted water levels from 2023 DFM model run using Stantec's Westport coordinate
 
 ![Westport Water Levels (2023)](../Figures/041624meeting/Westport_wl_new.png)
 ![Westport Water Levels (2023)](https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4)
+<video src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4" width="300" />
 <strong><em>Figure 1: Westport water levels (Stantec's coordinate vs. new @ 46.908078, -124.099941).</em>
 
 ### 2) Looked at x,y velocity and water level relationship at 2 different points
