--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -16,8 +16,6 @@
 Plotted water levels from 2023 DFM model run using Stantec's Westport coordinate and a new coordinate @ 46.908078, -124.099941 (~0.5km NE of NOAA's tide gauge, ~1.25km NW of Stantec's coordinate).
 
 ![Westport Water Levels (2023)](../Figures/041624meeting/Westport_wl_new.png)
-![Westport Water Levels (2023)](https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4)
-<video src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4" width="300" />
 <strong><em>Figure 1: Westport water levels (Stantec's coordinate vs. new @ 46.908078, -124.099941).</em>
 
 ### 2) Looked at x,y velocity and water level relationship at 2 different points
@@ -41,6 +39,9 @@ Velocities in channel show mean landward flow during flood tides and mean seawar
 
 ![Velocity and Water Level GIF (2023)](../Figures/041624meeting/Westport_vel_clip.mp4)
 ![Velocity and Water Level GIF (2023)](https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4)
+<video width="320" height="240" controls>
+  <source src="[video.mov](https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4)" type="video/mp4">
+</video>
 <strong><em>Figure 5: Water levels at Westport location and velocity vectors in GH channel.</em>
 
 ## Issues:
