--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -37,8 +37,6 @@ Takeaways:
 ### 3) Velocity field of GH channel during duration of 2023 model run (November 23 - December 12, 2023)
 Velocities in channel show mean landward flow during flood tides and mean seaward flow during ebb tides. During the transition between ebb and flood tides, velocities at the edges of the channel are stronger, then become weaker while velocities in the center channel become stronger throughout the tidal phase. Southern half of the channel exhibits stronger velocities roughly halfway through a tidal phase.
 
-![Velocity and Water Level GIF (2023)](../Figures/041624meeting/Westport_vel_clip.mp4)
-![Velocity and Water Level GIF (2023)](https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4)
 <video width="320" height="240" controls>
   <source src="[video.mov](https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4)" type="video/mp4">
 </video>
@@ -52,4 +50,6 @@ Velocities in channel show mean landward flow during flood tides and mean seawar
 - Work on CoPes poster
 - Investigate why DFM model works for Nov. 23 - Dec. 12 runs but NOT for Nov. 15 - Dec. 12 runs (Issue #2)
   - Related to restart file? Or map_interval or his_interval files?
+  - Worked for Nov. 18 - Dec. 12 run (water levels look reasonable).
+  - Now running for Nov. 13 - Dec. 12 run to see if it passes.
 - Filter out overlapping nodes in different '*_map.nc' files for plotting spatial output variables from DFM model. 
