--- a/WeeklyLogs/Log040724_041324.md
+++ b/WeeklyLogs/Log040724_041324.md
@@ -37,6 +37,8 @@ Takeaways:
 ### 3) Velocity field of GH channel during duration of 2023 model run (November 23 - December 12, 2023)
 Velocities in channel show mean landward flow during flood tides and mean seaward flow during ebb tides. During the transition between ebb and flood tides, velocities at the edges of the channel are stronger, then become weaker while velocities in the center channel become stronger throughout the tidal phase. Southern half of the channel exhibits stronger velocities roughly halfway through a tidal phase.
 
+![Test](../Figures/041624meeting/Westport_vel_clip.mp4)
+
 <video width="320" height="240" controls>
   <source src='https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/041624meeting/Westport_vel_clip.mp4' type='video/mp4'>
 </video>
