--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -1,10 +1,71 @@
 # April 24 - April 20, 2024
 ## Summary:
+- Water levels still explode to 100s of meters in both old DFM setup (8 files) and new DFM setup (15 files).
+- For DFM model run on and before Nov. 15, 2023, SSH at Tokepoint & Westport show up at hour=39.
+- 
 Water level explodes after ~39 hours in model run for model run 17738195 (November 13 start)
 Running model again starting on November 14 to see if blows up same time
 Need to look at spatial field, investigate where/when instability occurs causing water levels to explode
 
+## Tasks:
+1) Investigate overlapping points between different "*_map.nc" files.
+2) Investigate where instability for water level (SSH) occurs during runs starting from Nov. 15, 2023.
+
 ## Results:
+### 1) Overlapping points in "*_map.nc" files
+
+*older setup = original setup with model domain partitioned into 8 files (nodes=4; ntasks-per-node=2; cpus-per-task=8; nNodes=4; nProc=2)
+*newer setup = newer setup with model domain paritioned into 15 files (nodes=1; ntasks-per-node=40; nNodes=1; nProc=16)
+
+The different "*_map.nc" files have overlapping points. Investigating FlowFM_0013_map.nc and FlowFM_0015_map.nc files (GH) shows 2198 points overlapping. Water levels at these points are consistent with each other. However, velocities differ (primarily at the edges of each file boundary). Overlapping points may be necessary for feeding boundary conditions for forcing the other map file.
+
+Figure 1: Overlapping points within Gray's Harbor with new(er) DFM model setup.
+![Overlapping points (newer setup)](../Figures/042324meeting/OverlappingPoints_GH.png)
+
+Figure 2: Overlapping points within Gray's Harbor with older DFM model setup.
+![Overlapping points (older setup)](../Figures/042324meeting/OverlappingPoints_GH_StantecOriginal.png)
+
+Figure 3: Velocity (magnitude) at overlapping points between map partitions (newer setup).
+![Overlapping points zoomed (newer setup)](../Figures/042324meeting/OverlappingPoints_GH_zoomed.png)
+
+Figure 4: Velocity (magnitude) at overlapping points between map partitions (older setup).
+![Overlapping points zoomed (older setup)](../Figures/042324meeting/OverlappingPoints_GH_StantecOriginal_zoomed.png)
+
+- Water levels for original model (tides only) has instability around north channel of WB (+9.64m) that persists around this area for the entirety of the run (north channel and south GH).
+- DFM run starting from November 15 has instabilities at H=5 along the north coast, then instabilities start to rise inside the Straight of Juan De Fuca/Bellingham. By H=30, water level instabilities still exist in the straight and instability starts to grow at northern boundary. At H=38, instabilities at northern boundary grow very large (-58m).
+
+Figure 5: Water levels for DFM model (Nov. 15 start) at H=00.
+![Water levels (H=00)](../Figures/042324meeting/Instability_map_nov15_H00.png)
+
+Figure 6: Water levels for DFM model (Nov. 15 start) at H=03.
+![Water levels (H=03)](../Figures/042324meeting/Instability_map_nov15_H03.png)
+
+Figure 7: Water levels for DFM model (Nov. 15 start) at H=04.
+![Water levels (H=04)](../Figures/042324meeting/Instability_map_nov15_H04.png)
+
+Figure 8: Water levels for DFM model (Nov. 15 start) at H=05.
+![Water levels (H=05)](../Figures/042324meeting/Instability_map_nov15_H05.png)
+
+Figure 9: Water levels for DFM model (Nov. 15 start) at H=06.
+![Water levels (H=06)](../Figures/042324meeting/Instability_map_nov15_H06.png)
+
+Figure 10: Water levels for DFM model (Nov. 15 start) at H=30.
+![Water levels (H=30)](../Figures/042324meeting/Instability_map_nov15_H30.png)
+
+Figure 11: Water levels for DFM model (Nov. 15 start) at H=38.
+![Water levels (H=38)](../Figures/042324meeting/Instability_map_nov15_H38.png)
+
+
+DFM run starting from November 23 has instabilities around north channel of WB and south GH which is consistent. Otherwise, water levels at other times seem to be normal (H=39, 120).
+
+Figure 12: Water levels for DFM model (Nov. 23 start) at H=00.
+![Water levels (H=30)](../Figures/042324meeting/Instability_map_nov23_H00.png)
+
+Figure 13: Water levels for DFM model (Nov. 23 start) at H=39.
+![Water levels (H=39)](../Figures/042324meeting/Instability_map_nov23_H39.png)
+
+Figure 14: Water levels for DFM model (Nov. 23 start) at H=120.
+![Water levels (H=120)](../Figures/042324meeting/Instability_map_nov23_H120.png)
 
 
 ## Issues:
