--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -1,12 +1,9 @@
 # April 24 - April 20, 2024
 ## Summary:
-- Water levels still explode to 100s of meters in both old DFM setup (8 files) and new DFM setup (15 files).
-- For DFM model run on and before Nov. 15, 2023, SSH at Tokepoint & Westport show up at hour=39.
-
-
-Water level explodes after ~39 hours in model run for model run 17738195 (November 13 start)
-Running model again starting on November 14 to see if blows up same time
-Need to look at spatial field, investigate where/when instability occurs causing water levels to explode
+- Water levels still explode in both old DFM setup (n=8 files) and new DFM setup (n=15 files) when starting from Nov. 15 or before.
+- Instabilities arise for DFM model runs (starting on or before Nov. 15, 2023) right away at multiple locations (straight, north coast, northern boundary).
+  - For DFM model runs on or before Nov. 15, 2023, SSH at Tokepoint & Westport blow up at hour=39.
+- Overlapping points between different map files share same water levels but have different velocities at map edges.
 
 ## Tasks:
 1) Investigate overlapping points between different "*_map.nc" files.
@@ -70,6 +67,7 @@ Figure 14: Water levels for DFM model (Nov. 23 start) at H=120.
 
 
 ## Issues:
-
+- Many instabilities, think about how to fix
 
 ## Next Steps:
+- CoPes poster
